<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_checkpoint"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/button_checkpoint" />

    <Button
        android:id="@+id/button_check_io"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/button_check_io" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_button_location"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textOn="@string/toggle_on_location"
            android:textOff="@string/toggle_off_location" />

        <ToggleButton
            android:id="@+id/toggle_button_notification"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textOn="@string/toggle_on_notification"
            android:textOff="@string/toggle_off_notification" />

    </LinearLayout>


</LinearLayout>
